--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "8.32.0",
