--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2"
+    "eslint-config-next": "13.1.2",
+    "file-loader": "^6.2.0"
   }
 }
