--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.57.1",
+    "url-loader": "^4.1.1",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
